# registry

./: .gitignore  404.html  Brewfile  CMakeLists.txt  DEPENDENCIES  Dockerfile  Dockerfile.ce  Dockerfile.ee  Dockerfile.enterprise  Dockerfile.pro  Dockerfile.starter  LICENSE  Makefile  README.markdown  compose.yaml  index.html  mkdocs.yml  openapi.yaml  package-lock.json  package.json  sitemap.xml
.github/workflows/: ci.yml  deploy.yml  website.yml
api/: index.html
clients/nodejs/: Makefile  index.cjs  index.mjs  install.cjs  package.json  postinstall.cjs
cmake/: BootstrapFiles.cmake  FindCore.cmake  FindHydra.cmake  FindJSONSchema.cmake  FindNoa.cmake  FinduSockets.cmake  FinduWebSockets.cmake
cmake/commands/: esbuild.cmake  file2metapack.cmake  redocly.cmake
collections/: CMakeLists.txt
commercial/: index.html
configuration/: index.html
contrib/file2metapack/: CMakeLists.txt  file2metapack.cc
docker/: wrapper-index.sh  wrapper-server.sh  wrapper.sh
docs/: CNAME  api.md  commercial.md  configuration.md  getting-started.md  index.md  integrations.md  library.md
docs/assets/: style.css
getting-started/: index.html
integrations/: index.html
openapi/: openapi.yaml
openapi/api/: fetch.yaml  list-root.yaml  list.yaml
public/: Dockerfile  Dockerfile.base  Dockerfile.kraft  Kraftfile  registry.json
schemas/: configuration.json
scripts/: benchmark-command.sh  sandbox-manifest-refresh.sh
search/: search_index.json
src/configuration/: CMakeLists.txt  compile.cmake  configuration.cc  parse.cc  read.cc  schema.cmake  schema.h.in  schema.json
src/configuration/include/sourcemeta/registry/: configuration.h  configuration_error.h
src/enterprise/: enterprise_explorer.h  enterprise_html.h  enterprise_index.h  enterprise_server.h  index.cmake  server.cmake  style.scss
src/generator/: CMakeLists.txt  collection.cc  configuration.cc  output.cc  resolver.cc  validator.cc
src/generator/include/sourcemeta/registry/: generator.h  generator_collection.h  generator_configuration.h  generator_output.h  generator_resolver.h  generator_validator.h
src/gzip/: CMakeLists.txt  gzip.cc
src/html/: CMakeLists.txt  encoder.cc  escape.cc
src/index/: CMakeLists.txt  argv.h  collection.cc  collection.h  configuration.cc  configuration.h  configure.h.in  explorer.h  generators.h  helpers.h  html.h  html_partials.h  html_safe.h  index.cc  metadata.cmake  output.cc  output.h  parallel.h  resolver.cc  resolver.h  semver.h  style.scss  toc.h  validator.cc  validator.h  web.h
src/index/assets/: editor.js  main.js  manifest.webmanifest  style.scss  tabs.js
src/license/: CMakeLists.txt  license.cc
src/metapack/: CMakeLists.txt  metapack.cc  metapack_gzip_cli.cc
src/metapack/include/sourcemeta/registry/: metapack.h
src/resolver/: CMakeLists.txt  collection.cc  error.cc  resolver.cc  visitor.cc
src/resolver/include/sourcemeta/registry/: resolver.h  resolver_collection.h  resolver_error.h  resolver_visitor.h
src/server/: CMakeLists.txt  configure.h.in  error.h  evaluate.h  httpserver.h  httpserver_logger.h  httpserver_request.h  httpserver_response.h  logger.h  reader.h  request.h  resolver.h  search.h  server.cc  status.h  style.scss  uwebsockets.h
src/server/assets/: main.js
src/shared/: CMakeLists.txt  configure.h.in  license.cc  metapack.cc  version.cc
src/shared/include/sourcemeta/registry/: shared.h  shared_encoding.h  shared_license.h  shared_metapack.h  shared_version.h
src/web/: CMakeLists.txt  editor.js  helpers.h  main.js  page.h  search.js  style.scss
src/web/include/sourcemeta/registry/: web.h
src/web/pages/: directory.cc  index.cc  not_found.cc  schema.cc
src/web/scripts/: main.js  search.js
test/cli/: CMakeLists.txt
test/e2e/: bundle.hurl  css.hurl  dependencies.hurl  directory.hurl  etag.hurl  evaluate.hurl  get.hurl  head.hurl  health.hurl  html.hurl  invalid-method.hurl  javascript.hurl  locations.hurl  nav.hurl  not-found.hurl  period-schema.hurl  positions.hurl  search.hurl  security.hurl  unidentify.hurl  validate.hurl  vscode.hurl  yaml.hurl
test/unit/configuration/: CMakeLists.txt  configuration_read_test.cc  configuration_test.cc  partial_1.json  stub_1.json  stub_2.json  stub_3.json
test/unit/configuration/folder/: jsonschema.json
test/unit/configuration/stub/: parse_valid_003.json  partial_2.json  read_invalid_001.json  read_invalid_002.json  read_invalid_003.json  read_valid_002.json  read_valid_003.json  read_valid_004.json  read_valid_005.json  read_valid_009.json  read_valid_011.json  read_valid_012.json  read_valid_013.json  read_valid_014.json  stub_1.json  stub_10.json  stub_11.json  stub_2.json  stub_3.json  stub_4.json  stub_5.json  stub_6.json  stub_7.json  stub_8.json  stub_9.json
test/unit/configuration/stub/collections/test/: jsonschema.json  nested_1.json  registry.json
test/unit/configuration/stub/folder/: jsonschema.json
test/unit/generator/: CMakeLists.txt  configuration.json  generator_resolver_test.cc
test/unit/generator/schemas/: 2019-09-recursive-ref.json  2020-12-embedded-resource.json  2020-12-id-with-casing.json  2020-12-meta-schema.json  2020-12-meta.json  2020-12-ref-needs-rebase.json  2020-12-with-id-json.json
test/unit/generator/schemas/example/: 2020-12-ref-with-casing.json  2020-12-with-id.json  draft4-trailing-hash-with-ref.json
test/unit/generator/schemas/meta-draft4/: draft4-override.json
test/unit/resolver/: CMakeLists.txt  registry.json  resolver_relativize_test.cc  resolver_test.cc
test/unit/resolver/schemas/base-slash/: 2020-12-equal-to-base.json
test/unit/resolver/schemas/example/: 2020-12-absolute-ref.json  2020-12-base-with-trailing-slash.json  2020-12-circular.json  2020-12-pointer-ref-casing-relative.json  2020-12-relative-id.json  2020-12-schema-extension.json  2020-12-schema-yaml-extension.json  2020-12-schema-yml-extension.json  2020-12-semver.json  2020-12-with-id-json-duplicate.json  2020-12-with-id.schema.json  2020-12-yaml-extension.json  2020-12-yaml-json-mix-extension.json  2020-12-yml-extension.json  draft4-internal-ref.json  only-id.json
(+447 files in other folders)
